--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@ minimal_theme: false          # radically minimalistic theme
 
 navigation:                  # show navigation links in the header	
   - index.html	
-  # - instructions.md
+  - quanteda: https://quanteda.io/index.html
   # - markdown.md	
   # - about.md
 
