--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,7 +15,7 @@ dark_header: true           # uses dark header whether dark_theme is enabled or 
 minimal_theme: false          # radically minimalistic theme
 
 navigation:                  # show navigation links in the header	
-  - index.html	
+  - index.md	
   - packages.md	
   - about.md
 
