--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,6 +20,7 @@ navigation:                  # show navigation links in the header
   - data.md
   - packages.md	
   - accuracy.md
+  - about.md
 
 
 
